--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "git+https://github.com/nodejs/examples.git"
   },
   "keywords": [],
-  "author": "Thiruppathi Muthukumar",
+  "author": "Alexej Hamburg",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/nodejs/examples/issues"
